docs: focus README on API usage, drop internal/implementation detail
Address review feedback:
- Position EWT for the JVM (Java, Kotlin, or any JVM language), not just Java
- Getting started consumes the published artifact (dev.equo:ewt.api with an
  OS classifier) via Gradle/Maven — you don't clone the repo to build an app;
  running the bundled examples is a secondary "explore" note
- Replace the Status section with a Roadmap (web, animations, complete
  Material/foundational/Cupertino coverage, SWT Evolve integration)
- Add a second demo GIF showing animations
- Remove Flutter-internals jargon and implementation details from the pitch;
  drop the code-generator/regeneration tooling and architecture breakdown

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>