@@ -1,18 +1,17 @@
 # EWT — Equo Widget Toolkit
 
 ![License](https://img.shields.io/badge/license-Apache%202.0-blue)
-![JDK](https://img.shields.io/badge/JDK-21%2B-orange)
+![JDK](https://img.shields.io/badge/JDK-22%2B-orange)
 ![macOS](https://img.shields.io/badge/macOS-Supported-green) ![Windows](https://img.shields.io/badge/Windows-Supported-green) ![Linux](https://img.shields.io/badge/Linux-Supported-green)
 
-**Build Flutter UIs in pure Java.**
+**Build modern desktop UIs on the JVM.**
 
-EWT lets Java developers create native, cross-platform Flutter user interfaces
-without writing a line of Dart. It bridges the JVM and the Flutter engine through
-the JDK 21 [Foreign Function & Memory API](https://openjdk.org/jeps/454), so your
-Java code drives a real Flutter render pipeline.
+EWT lets JVM developers create native, cross-platform desktop user interfaces —
+in Java, Kotlin, or any JVM language, with no Dart required. You get modern,
+fluid interfaces using the languages, tools, and IDE you already work with.
 
 <p align="center">
-  <img src="docs/demo.gif" alt="EWT demo — a Flutter UI driven from Java" width="800">
+  <img src="docs/demo.gif" alt="EWT demo — a desktop UI built in Java" width="800">
 </p>
 
 ```java
@@ -32,17 +31,20 @@ public class HelloWorld {
 
 ## Why EWT
 
-- **One UI codebase, every desktop platform** — Linux, macOS, and Windows from the
-  same Java sources, rendered by Flutter.
-- **Java-native API** — fluent, type-safe builders generated directly from the
-  Flutter widget catalog. `Center`, `Column`, `Container`, `Scaffold`,
-  `MaterialApp`, and many more map one-to-one to their Flutter counterparts.
-- **Stateful widgets you already know** — the familiar `StatefulWidget` /
-  `setState` model, expressed in Java.
-- **No FFI boilerplate** — the C and FFM bindings are generated; you write
-  application code, not glue.
+- **One codebase, every desktop platform** — run the same UI on Linux, macOS,
+  and Windows.
+- **Any JVM language** — write your UI in Java, Kotlin, or any language that runs
+  on the JVM.
+- **Modern, fluid interfaces** — smooth, GPU-accelerated rendering with crisp
+  fonts and sharp icons.
+- **A fluent, type-safe API** — compose your UI from familiar building blocks
+  like `Center`, `Column`, `Container`, `Scaffold`, and `MaterialApp`.
+- **Reactive by design** — build dynamic UIs that update automatically as your
+  data changes.
 
-## A stateful example
+## Example: an interactive counter
+
+This counter rebuilds its UI every time the button is tapped:
 
 ```java
 class Counter extends SubStatefulWidget {
@@ -66,82 +68,100 @@ class CounterState extends SubState<Counter> {
 }
 ```
 
-See [`examples/`](examples/src/main/java/dev/equo) for full, runnable apps:
-`HelloWorld`, `Counter`, `LoginForm`, `ProfileCard`, and a `WidgetGallery`.
+Beyond static layouts, EWT supports rich animations for polished, modern UIs:
 
-## How it works
-
-EWT is a four-layer stack. Java widget calls are translated into a widget tree
-that the Flutter engine renders; events flow back through C function pointers.
-
-```
-Java user code        (ewt.api + examples)
-      │  JDK 21 FFM (Project Panama)
-C native bridge       (widgets/ — exports startApp + widget factories)
-      │  function pointers / callbacks
-Flutter / Dart        (widgets FFI plugin)
-```
-
-| Module                 | Language | Role                                                                   |
-|------------------------|----------|------------------------------------------------------------------------|
-| `ewt.api`              | Java     | Public API: widget base classes, generated builders, the FFM bridge    |
-| `examples`             | Java     | Runnable example applications                                          |
-| `generator`            | Dart     | Reads the Flutter widget catalog, emits Java builders and C headers     |
-| `annotation-processor` | Java     | Patches Immutables-generated builders to extend `Widget`               |
-| `widgets`              | Dart + C | Flutter FFI plugin; the native side the Java layer calls into          |
-
-The Java builders are **generated** from Flutter's own widget definitions, so the
-API tracks Flutter closely and grows by regenerating rather than hand-writing.
+<p align="center">
+  <img src="docs/animations.gif" alt="An animated EWT desktop app" width="800">
+</p>
 
 ## Requirements
 
-- **JDK 21+** (required for the Foreign Function & Memory API)
-- **Flutter SDK** (to build the native `widgets` plugin)
-- Gradle (via the bundled wrapper, `./gradlew`)
+- **JDK 22 or newer**
 
-## Quick start
+## Getting started
 
-```bash
-# Build the API: compiles Java, builds the Flutter native libraries
-# (runs `flutter build`) and packages them into the jar.
-./gradlew :ewt.api:build
+You don't clone this repository to build an app with EWT — add the published
+artifact to your own Gradle or Maven project.
 
-# Run the test suite
-./gradlew :ewt.api:test
+EWT ships as platform-specific JARs, so pick the classifier for your target
+platform: `linux`, `macos`, or `windows`.
+
+### Gradle (Kotlin DSL)
+
+```kotlin
+repositories {
+    maven { url = uri("https://gitlab.com/api/v4/projects/67882950/packages/maven") }
+}
+
+val ewtOs = when {
+    org.gradle.internal.os.OperatingSystem.current().isWindows -> "windows"
+    org.gradle.internal.os.OperatingSystem.current().isMacOsX  -> "macos"
+    else                                                       -> "linux"
+}
+
+dependencies {
+    // `+` pulls the latest release; pin a version (e.g. 0.1.0) for reproducible builds
+    implementation("dev.equo:ewt.api:+:$ewtOs@jar")
+}
 ```
 
-The generated Java builders and FFM bindings are committed, so a fresh checkout
-builds without regenerating. A plain `./gradlew build` builds every module but
-does **not** run the code generator, so it will not pick up changes to the
-Flutter widget set — regenerate first (see below) when you change them.
+### Maven
 
-Point EWT at the built native libraries with the `EWT_HOME` environment variable
-(or the `ewt.home` system property) before launching an example; loading falls
-back to a bundled loader when unset.
+```xml
+<repositories>
+  <repository>
+    <id>ewt</id>
+    <url>https://gitlab.com/api/v4/projects/67882950/packages/maven</url>
+  </repository>
+</repositories>
 
-## Project tooling
-
-When you change the widget set, regenerate everything in one step:
-
-```bash
-./gradlew :generator:generator   # regenerate Java builders + C headers,
-                                 # then ffigen (Dart FFI) and jextract (Java FFM)
+<dependencies>
+  <dependency>
+    <groupId>dev.equo</groupId>
+    <artifactId>ewt.api</artifactId>
+    <version>0.1.0</version>
+    <classifier>linux</classifier> <!-- or macos / windows -->
+  </dependency>
+</dependencies>
 ```
 
-`:generator:generator` also runs `:widgets:ffigen` and `:ewt.api:jextract`
-automatically. Then rebuild the API to compile the regenerated sources:
+Then write your UI (see the example above) and start it with `App.runApp(...)`.
+EWT calls into native code, so run your app with
+`--enable-native-access=ALL-UNNAMED` (and `-XstartOnFirstThread` on macOS).
+
+### Explore the examples
+
+To browse the bundled sample apps, clone the repo and run one directly:
 
 ```bash
-./gradlew :ewt.api:build
+./gradlew :examples:run -PmainClass=dev.equo.WidgetGallery
 ```
 
-`jextract` (v25) must be installed at `~/bin/jextract-25/bin/jextract`, and
-Flutter must be available for the native build.
+Switch `mainClass` to try others — `dev.equo.Demo`,
+`dev.equo.AnimationWidgetsDemo`, `dev.equo.MusicPlayer`,
+`dev.equo.AnalyticsDashboard`, `dev.equo.Calculator`, and more in
+[`examples/`](examples/src/main/java/dev/equo).
 
-## Status
+## Roadmap
 
-EWT is under active development. The widget catalog and platform packaging are
-expanding; APIs may still change.
+EWT is under active, fast-moving development. Here's where we're headed:
+
+**Coming soon**
+
+- **Web support** — run the same EWT codebase in the browser. One UI, desktop and
+  web, no rewrite.
+- **Animations** — a full `AnimationController` API for building fluid, animated
+  interfaces.
+- **Complete widget coverage** — full support for Flutter's entire Material and
+  foundational widget sets, plus Cupertino (iOS-style) components, so you can
+  build in whatever design language your product needs.
+
+**On the horizon**
+
+- **[SWT Evolve](https://equo.dev/swt) integration** — drop brand-new EWT
+  components straight into modernized SWT / Eclipse RCP applications, mixing fresh
+  EWT screens with your existing UI in the same window — feature by feature, at
+  your pace.
 
 ## License
 
